--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,3 @@
-include ':FtcRobotController'
-include ':TeamCode'
+include ':FtcRobotController', ':HankExtensions'
+include ':HanksTanksCode'
 include ':openCVLibrary330'
