--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -12,9 +12,9 @@
       android:anyDensity="true" />
 
   <uses-permission android:name="android.permission.CAMERA"/>
-  <uses-feature android:name="android.hardware.camera" android:required="false"/>
+  <uses-feature android:name="android.hardware.camera" android:required="true"/>
   <uses-feature android:name="android.hardware.camera.autofocus" android:required="false"/>
-  <uses-feature android:name="android.hardware.camera.front" android:required="false"/>
+  <uses-feature android:name="android.hardware.camera.front" android:required="true"/>
   <uses-feature android:name="android.hardware.camera.front.autofocus" android:required="false"/>
 
   <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -29,9 +29,10 @@
     <!-- The main robot controller activity -->
     <activity
       android:name="org.firstinspires.ftc.robotcontroller.internal.FtcRobotControllerActivity"
+      android:screenOrientation="landscape"
       android:configChanges="orientation|screenSize"
       android:label="@string/app_name"
-      android:launchMode="singleTask" >
+      android:launchMode="singleTask">
 
       <intent-filter>
         <category android:name="android.intent.category.LAUNCHER" />
