--- a/FtcCommon/src/main/AndroidManifest.xml
+++ b/FtcCommon/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher" >
+        android:icon="@mipmap/ic_launcher" > // Modified for OpenFTC
         <activity
             android:name="com.qualcomm.ftccommon.FtcRobotControllerSettingsActivity"
             android:exported="true"
