--- a/FtcRobotController/build.release.gradle
+++ b/FtcRobotController/build.release.gradle
@@ -4,4 +4,6 @@ dependencies {
     compile project(':Hardware')
     compile project(':FtcCommon')
     compile (name:'WirelessP2p-release', ext:'aar')
+    compile project(':OpenFTC')
+    compile project(':openCVLibrary330')
 }
