--- a/FtcRobotController/src/main/AndroidManifest.xml
+++ b/FtcRobotController/src/main/AndroidManifest.xml
@@ -2,14 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
           package="com.qualcomm.ftcrobotcontroller"
-          android:versionCode="24"
-          android:versionName="3.4">
-
-  <supports-screens   android:resizeable="true"
-      android:smallScreens="true"
-      android:normalScreens="true"
-      android:largeScreens="true"
-      android:anyDensity="true" />
+          android:versionCode="25"
+          android:versionName="3.5">
 
   <uses-permission android:name="android.permission.CAMERA"/>
   <uses-feature android:name="android.hardware.camera" android:required="true"/>
@@ -22,7 +16,7 @@
   <application
     android:allowBackup="true"
     android:largeHeap="true"
-    android:icon="@drawable/ic_launcher"
+    android:icon="@mipmap/ic_launcher"
     android:label="@string/app_name"
     android:theme="@style/AppThemeRedRC" >
 
@@ -32,7 +26,7 @@
       android:screenOrientation="landscape"
       android:configChanges="orientation|screenSize"
       android:label="@string/app_name"
-      android:launchMode="singleTask">
+      android:launchMode="singleTask" >
 
       <intent-filter>
         <category android:name="android.intent.category.LAUNCHER" />
