--- a/Inspection/build.gradle
+++ b/Inspection/build.gradle
@@ -8,8 +8,8 @@ android {
     defaultConfig {
         minSdkVersion 19
         targetSdkVersion 19
-        versionCode 34
-        versionName "5.12"
+        versionCode 37
+        versionName "5.15"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -32,4 +32,5 @@ repositories {
 
 dependencies {
     compile project(':RobotCore')
+    compile project(':OpenFTC')
 }
