Refactor EVERYTHING to work with my lib

--- a/FtcRobotController/build.release.gradle
+++ b/FtcRobotController/build.release.gradle
@@ -1,4 +1,5 @@
 dependencies {
+    compile project(':makiahsandroidlib')
     compile project(':RobotCore')
     compile project(':Inspection')
     compile project(':Hardware')
