--- a/FtcCommon/build.gradle
+++ b/FtcCommon/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "25.0.3"
+
 
     defaultConfig {
         minSdkVersion 19
@@ -27,8 +27,9 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':RobotCore')
-    compile project(':Hardware')
-    compile project(':Inspection')
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation project(':RobotCore')
+    implementation project(':OpenFTC')
+    implementation project(':Hardware')
+    implementation project(':Inspection')
 }
