--- a/Inspection/build.gradle
+++ b/Inspection/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "25.0.3"
+
 
     defaultConfig {
         minSdkVersion 19
@@ -30,6 +30,6 @@ repositories {
 }
 
 dependencies {
-    compile project(':RobotCore')
-    compile project(':OpenFTC')
+    implementation project(':RobotCore')
+    implementation project(':OpenFTC')
 }
