--- a/RobotCore/build.gradle
+++ b/RobotCore/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "25.0.3"
+
 
     defaultConfig {
         minSdkVersion 19
@@ -21,5 +21,5 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs') //mark as api once we update the Android plugin to 3.0+
+    api fileTree(include: ['*.jar'], dir: 'libs') //mark as api once we update the Android plugin to 3.0+
 }
