Add native build support

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -10,3 +10,11 @@
 // Custom definitions may go here
 // Include common definitions from above.
 apply from: '../build.common.gradle'
+
+android {
+    externalNativeBuild {
+        cmake {
+            path 'CMakeLists.txt'
+        }
+    }
+}
