--- a/FtcRobotController/CMakeLists.txt
+++ b/FtcRobotController/CMakeLists.txt
@@ -16,7 +16,7 @@ set_target_properties(lib_opencv PROPERTIES IMPORTED_LOCATION ${CMAKE_CURRENT_SO
 # Gradle automatically packages shared libraries with your APK.
 
 add_library( # Sets the name of the library.
-             native-lib
+             native-opencv
 
              # Sets the library as a shared library.
              SHARED
@@ -46,7 +46,7 @@ find_library( # Sets the name of the path variable.
 # build script, prebuilt third-party libraries, or system libraries.
 
 target_link_libraries( # Specifies the target library.
-                       native-lib
+                       native-opencv
 
                        # OpenCV lib
                        lib_opencv
